--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tchef",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "description": "A better Fetch - with bells and whistles",
     "main": "index.js",
     "type": "module",
@@ -14,7 +14,7 @@
         "test": "vitest",
         "coverage": "vitest run --coverage --ui",
         "test:local": "run-p serve test",
-        "test:ci": "run-p serve test -- --run",
+        "test:ci": "vitest --run",
         "start": "node dist/index.js",
         "dev:tsc": "tsc --watch --preserveWatchOutput --noEmit",
         "dev:node": "node --watch dist/index.js",
