--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
     "name": "tchef",
-    "version": "0.0.11",
+    "version": "0.1.1",
     "description": "A better Fetch - with bells and whistles",
-    "main": "index.js",
+    "main": "dist/index.js",
+    "types": "dist/src/index.d.ts",
     "type": "module",
     "scripts": {
         "lint": "eslint --ext .ts src",
         "lint:fix": "eslint --fix --ext .ts src",
         "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --target=es2022 --minify --sourcemap",
+        "build:types": "tsc --declaration --emitDeclarationOnly --outDir dist",
         "check": "run-s lint test:ci build",
         "serve": "json-server ./src/server/db.json --port 3000",
         "bump": "npx changelogen@latest --bump",
@@ -46,7 +48,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/rogerio-romao/tchef"
+        "url": "git+https://github.com/rogerio-romao/tchef.git"
     },
     "keywords": [
         "fetch",
@@ -57,5 +59,12 @@
     ],
     "engines": {
         "node": ">=21.0.0"
-    }
+    },
+    "files": [
+        "dist",
+        "README.md",
+        "CHANGELOG.md",
+        ".nvmrc",
+        "tsconfig.json"
+    ]
 }
