--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
         /* If transpiling with TypeScript: */
         "moduleResolution": "Bundler", // ensures TypeScript output can be consumed by Node.js, change this to Bundler if using a bundler, Deno, Bun, tsx, next, remix, svelte, etc.
         "module": "ESNext", // ensures TypeScript output can be consumed by Node.js, change this to ESNext if using a bundler, Deno, Bun, tsx, next, remix, svelte, etc.
-        "noEmit": true, // if you're using a bundler, set this to true
+        "declaration": true, // generates corresponding .d.ts file
+        "emitDeclarationOnly": true,
         "lib": ["es2022"], // if running on dom use ["es2022", "dom", "dom.iterable"]
         "outDir": "./dist" // if you're using a bundler, set this to the output directory of your bundler
     }
