--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tchef",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "A better Fetch - with bells and whistles",
     "main": "dist/index.js",
     "types": "dist/src/index.d.ts",
@@ -8,7 +8,7 @@
     "scripts": {
         "lint": "eslint --ext .ts src",
         "lint:fix": "eslint --fix --ext .ts src",
-        "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --target=es2022 --minify --sourcemap",
+        "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --target=es2022 --minify --sourcemap --packages=external",
         "build:types": "tsc --declaration --emitDeclarationOnly --outDir dist",
         "check": "run-s lint test:ci build",
         "serve": "json-server ./src/server/db.json --port 3000",
@@ -40,12 +40,11 @@
         "eslint-plugin-unicorn": "^52.0.0",
         "npm-run-all2": "^6.1.2",
         "typescript": "^5.3.3",
-        "vitest": "^1.3.0"
+        "vitest": "^1.3.0",
+        "json-server": "1.0.0-alpha.23",
+        "consola": "^3.2.3"
     },
-    "dependencies": {
-        "consola": "^3.2.3",
-        "json-server": "1.0.0-alpha.23"
-    },
+    "dependencies": {},
     "repository": {
         "type": "git",
         "url": "git+https://github.com/rogerio-romao/tchef.git"
