--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tchef",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "A better Fetch - with bells and whistles",
     "main": "dist/index.js",
     "types": "dist/src/index.d.ts",
@@ -8,7 +8,7 @@
     "scripts": {
         "lint": "eslint --ext .ts src",
         "lint:fix": "eslint --fix --ext .ts src",
-        "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --target=es2022 --minify --sourcemap --packages=external",
+        "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --target=es2022 --minify --sourcemap --external:all",
         "build:types": "tsc --declaration --emitDeclarationOnly --outDir dist",
         "check": "run-s lint test:ci build",
         "serve": "json-server ./src/server/db.json --port 3000",
@@ -62,7 +62,6 @@
     "files": [
         "dist",
         "README.md",
-        "CHANGELOG.md",
         ".nvmrc",
         "tsconfig.json"
     ]
