--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
     "name": "tchef",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "description": "A better Fetch - with bells and whistles",
     "main": "dist/index.js",
     "types": "dist/src/index.d.ts",
     "type": "module",
     "scripts": {
-        "lint": "eslint --ext .ts src",
-        "lint:fix": "eslint --fix --ext .ts src",
-        "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --target=es2022 --minify --sourcemap --external:all",
+        "bump:patch": "npx changelogen@latest --bump --patch",
+        "bump:minor": "npx changelogen@latest --bump --minor",
+        "bump:major": "npx changelogen@latest --bump --major",
+        "build": "run-s build:node build:types",
+        "build:node": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --target=es2022 --minify --sourcemap --external:all",
         "build:types": "tsc --declaration --emitDeclarationOnly --outDir dist",
-        "check": "run-s lint test:ci build",
-        "serve": "json-server ./src/server/db.json --port 3000",
-        "bump": "npx changelogen@latest --bump",
-        "test": "vitest",
-        "coverage": "vitest run --coverage",
-        "test:local": "run-p serve test",
-        "test:ci": "vitest --run",
-        "start": "node dist/index.js",
+        "commit:check": "run-s lint test:ci build",
+        "dev": "run-p dev:*",
         "dev:tsc": "tsc --watch --preserveWatchOutput --noEmit",
         "dev:node": "node --watch dist/index.js",
         "dev:esbuild": "pnpm run build --watch",
-        "dev": "run-p dev:*"
+        "lint": "eslint --ext .ts src",
+        "lint:fix": "eslint --fix --ext .ts src",
+        "serve:db": "json-server ./src/server/db.json --port 3000",
+        "start": "node dist/index.js",
+        "test": "vitest",
+        "test:ci": "vitest --run",
+        "test:coverage": "CI=true vitest run --coverage",
+        "test:local": "run-p serve test"
     },
     "author": "Rogerio Romao",
     "license": "ISC",
