--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "test": "vitest",
         "test:ci": "vitest --run",
         "test:coverage": "CI=true vitest run --coverage",
-        "test:local": "run-p serve test"
+        "test:local": "run-p serve:db test"
     },
     "author": "Rogerio Romao",
     "license": "ISC",
