refactor: export types from index

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "bump:major": "npm version major",
         "build": "run-s build:node build:types",
         "build:node": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --target=es2022 --minify --sourcemap --external:all",
-        "build:types": "tsc --declaration --emitDeclarationOnly --outDir dist",
+        "build:types": "tsc --declaration --emitDeclarationOnly --declarationDir dist --declarationMap --allowJs --outDir dist",
         "commit:check": "run-s lint test:ci build",
         "dev": "run-p dev:*",
         "dev:tsc": "tsc --watch --preserveWatchOutput --noEmit",
