--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
             - uses: actions/checkout@v4
 
             - uses: pnpm/action-setup@v4
+              with:
+                  version: 'latest'
 
             - name: Set up Node.js
               uses: actions/setup-node@v4
