--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
               run: pnpm run lint
 
             - name: Test
-              run: pnpm run test:ci
+              run: pnpm run test:ci -- --timeout 30000
 
             - name: Build
               run: pnpm run build
