--- a/.github/workflows/jsr-publish.yml
+++ b/.github/workflows/jsr-publish.yml
@@ -13,4 +13,14 @@ jobs:
             id-token: write # The OIDC ID token is used for authentication with JSR.
         steps:
             - uses: actions/checkout@v4
-            - run: npx jsr publish
+
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                node-version: '20' # or whatever version you need
+
+            - name: Install npm dependencies
+              run: npm install
+
+            - name: Publish with jsr
+              run: npx jsr publish
