--- a/.github/workflows/jsr-publish.yml
+++ b/.github/workflows/jsr-publish.yml
@@ -17,10 +17,13 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                node-version: '20' # or whatever version you need
+                node-version: '22' # or whatever version you need
+                
+            - name: Install pnpm
+              run: npm install -g pnpm
 
             - name: Install npm dependencies
-              run: npm install
+              run: pnpm install
 
             - name: Publish with jsr
               run: npx jsr publish
